--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="${applicationId}">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aditya.downtube_app">
     <application
         android:label="Downtube"
         android:name="${applicationName}"
@@ -43,9 +43,7 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
-  
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <user-permission android:name="android.permission.INTERNET"/>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
