--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   flutter_riverpod: ^2.6.1
+  http: ^1.4.0
+  youtube_explode_dart: ^2.5.1
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +27,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-
+  assets:
+      - assets/images/
+   
 
   # fonts:
   #   - family: Schyler
