--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: downtube_app
+name: downtube
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you plan to publish to pub.dev
+publish_to: "none" # Remove this line if you plan to publish to pub.dev
 
 version: 4.2.5+1
 
@@ -15,11 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   flutter_riverpod: ^2.6.1
-  http: ^1.4.0
+
   youtube_explode_dart: ^2.5.1
   permission_handler: ^12.0.1
-  ffmpeg_kit_flutter_new: ^2.0.0
-  path_provider: ^2.1.5
+
 
 dev_dependencies:
   flutter_test:
@@ -31,8 +30,7 @@ flutter:
   uses-material-design: true
 
   assets:
-      - assets/images/
-   
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
